--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="一款基于网页的在线模型设计与编辑 3D CAD 应用程序" />
         <meta name="keywords" content="Web CAD, WebAssembly, WASM, Three.js, OCCT, Opencascade, 3D CAD, 在线 CAD, 在线建模" />
         <meta name="author" content="仙阁" />
-        <title>Chili3D - Web-based 3D CAD application</title>
+        <title> Web-based 3D CAD application</title>
         <link rel="icon" href="favicon.svg">
         <link rel="stylesheet" type="text/css" href="index.css" />
         <script type="text/javascript">
